Tentative d'envoi exercice 13 a partir Git.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "directories": {
+    "doc": "docs"
+  },
+  "devDependencies": {
     "tailwindcss": "^3.4.12"
   }
 }
